Add single default ibus engine for Indic locales

https://bugzilla.gnome.org/show_bug.cgi?id=685954